add security and finish basic endpoints
