# backend/src/main/java/top/frankxxj/homework/backend/ride/RideDto.java
@@ -6,5 +6,6 @@ import java.util.UUID;
 /**
  * DTO for {@link Ride}
  */
-public record RideDto(UUID userId, UUID bikeId) implements Serializable {
+public record RideDto(UUID userId,
+                      UUID bikeId) implements Serializable {
 }
